--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -46,7 +46,7 @@ p {
   color: var(--gray);
 }
 html {
-  scroll-snap-type: y proximity;
+  scroll-snap-type: y mandatory;
   scroll-behavior: smooth;
 }
 
