--- a/src/app/components/Navbar.css
+++ b/src/app/components/Navbar.css
@@ -38,6 +38,7 @@
     transition: transform 0.4s ease;
     display: flex; /* ทำให้ลิงก์เป็น flexbox */
     align-items: center; /* จัดให้อยู่กลางในแนวตั้ง */
+    text-decoration: none;
 }
 
 .navbar a:hover {
@@ -56,7 +57,7 @@
     padding: 10px 20px;
     border-radius: 10px;
 }
-@media (max-width:700px){
+@media screen and (max-width: 876px) {
     .navbar {
         display:none;
     }
