--- a/src/app/home/Parts/Post.css
+++ b/src/app/home/Parts/Post.css
@@ -3,13 +3,24 @@
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
-    margin: 0;
+    margin: 0; 
     padding: 0;
+    width: 100%;
+    overflow: hidden;
     
     img{
         width: 100%;
-        height: 80vh;
+        height: auto;
         object-fit: cover;
+        margin-top: 4px;
 
+    }
+}
+@media only screen and (max-width: 600px) {
+    .post{
+        img{
+            width: 100%;
+            height: 200px;
+        }
     }
 }
