--- a/src/app/home/Parts/Review.css
+++ b/src/app/home/Parts/Review.css
@@ -6,6 +6,7 @@
     justify-content: center;
     align-items: center;
     overflow: hidden;
+    margin-top:  10px;
   }
   
   .review .slider {
@@ -16,7 +17,7 @@
     height: 100%;
     gap: 0; /* No gaps between slides */
     object-fit: cover;
-    scrollbar-width: none; /* Firefox */
+    scrollbar-width: none; 
   }
   
   .review .slide {
@@ -28,7 +29,7 @@
 }
 
 .review .slide img {
-    width: 100%; /* ทำให้ภาพขยายให้เต็มขนาดของ slide */
+    width: 100%; 
     height: 100%;
     object-fit: cover;
 }
