--- a/src/app/components/Navbar.css
+++ b/src/app/components/Navbar.css
@@ -5,10 +5,10 @@
     position: fixed;
     top: 0;
     background-color: rgba(0, 0, 0, 0); /* Transparent background */
-    padding: 10px 0;
     width: 100%;
     z-index: 10;
     transition: background-color 0.4s ease, box-shadow 0.4s ease;
+    padding: 10px 0 5px 0;
 }
 
 .navbar.scrolled {
@@ -22,12 +22,16 @@
     list-style: none;
     padding: 0;
     margin: 0;
+
 }
 
 .navbar li {
     display: flex;
     align-items: center;
+
 }
+
+
 .navbar img{
     width: 6vh;
 }
@@ -49,6 +53,11 @@
     border: none;
     cursor: pointer;
     z-index: 2;
+    transition: 0.2s;
+}
+.navbar li a:hover{
+    transform: scale(1.1);
+    color: #00bfff;
 }
 .nav img{
     width: 100px;
@@ -68,7 +77,6 @@
     font-size: 1.5rem;
 }
 
-/* Dropdown menu styles */
 .dropdown-menu {
     position: fixed;
     top: -100%;
@@ -80,7 +88,7 @@
     display: flex;
     flex-direction: column;
     justify-content: top;
-    padding: 100px 40px;
+    padding: 100px 100px;
     transition: top 0.6s ease;
     z-index: 2;
     
@@ -94,9 +102,7 @@
     transition: transform 0.3s ease, color 0.3s ease;
     
 }
-
 .dropdown-item:hover {
-    transform: scale(1.1);
     color: #00bfff;
 }
 
