--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,4 +1,5 @@
-@import url('https://fonts.googleapis.com/css2?family=Kanit:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Kanit:wght@100;200;300;400;500;600;700;800&display=swap');
+
 
 :root {
   --navy :#16325B;
@@ -18,7 +19,8 @@ p {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: 'Kanit';
+
+  font-family: Arial,'kanit' , Helvetica, sans-serif;
 }
 
 .app {
@@ -29,6 +31,10 @@ p {
 }
 .flex{
   display: flex;
+}
+.icon-img{
+  width: 1rem;
+  height: auto;
 }
 .blue{
   color: var(--blue);
