--- a/src/app/home/Parts/MainSlider.css
+++ b/src/app/home/Parts/MainSlider.css
@@ -49,14 +49,14 @@
 }
 
 .container .slide::after {
-    content: ''; /* Creates an empty pseudo-element */
-    position: absolute; /* Positions it relative to the slide container */
+    content: ''; 
+    position: absolute; 
     top: 0;
     left: 0;
     right: 0;
     bottom: 0;
-    background: linear-gradient(to bottom, rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0)); /* Gradient from bottom to top */
-    pointer-events: none; /* Prevents interaction with the fade layer */
+    background: linear-gradient(to bottom, rgba(0, 0, 0, 0.8) 0%, rgba(0, 0, 0, 0) 60%);
+    pointer-events: none;
 }
 
   
@@ -69,42 +69,47 @@
     color: white;
     text-align: left;
     z-index: 2;
-    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+
     h1{
-      font-size:2.5rem;
+      font-size:2rem;
+      line-height: 2;
     }
     p{
-        font-size: 2rem;
+        font-size: 1rem;
         
     }
-    button{
-      font-size: 1rem;
-      border: none;
-      border-radius: 1rem;
+    .button-link {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      font-size: 0.8rem;
+      text-align: center;
+      text-decoration: none;
+      border-radius: 50px ;
       cursor: pointer;
       height: 2rem;
-      width: 8rem;
-      background-color: var(--navy);
-      margin-top:2rem;
-      
-      a{
-        text-decoration: none;
-        color:var(--yellow)
-      }
+      width: 6rem;
+      margin-top: 1rem;
+      background-color: var(--blue);
+      color: white;
+      transition: all 0.2s ease-in-out;
+      padding: 0;
     }
-  
+    
   }
   
   .container .slider-nav {
     position: absolute;
-    bottom: 10vw;
-    right: 20vw;
+    bottom: 10vh;
+    right: 10vw;
     display: flex;
     gap: 10px;
     z-index: 2;
   }
   
   .container .slider-nav button {
+    display: flex;
+    justify-content: center;
     background-color: rgba(0, 0, 0, 0.5);
     color: white;
     border: none;
@@ -115,17 +120,12 @@
     overflow: hidden;
     box-shadow: 0 4px 12px rgba(0, 0, 0, 0.3);
     transition: 0.2s ease-in-out;
-    box-shadow: 2px 2px 80px rgba(255, 255, 255, 0.5);
     img{
-      width: 100%;
       height: 100%;
       object-fit: cover;
     }
   }
-  .container .slider-nav button:hover {
-    transform: scale(1.1);
-  }
-  
+ 
   .container .slider-nav button:not(.active) img {
     filter: brightness(0.3); /* Darken inactive images */
   }
