--- a/src/app/home/Parts/Post.css
+++ b/src/app/home/Parts/Post.css
@@ -13,8 +13,11 @@
   
   .post-item {
     width: 100%; /* Ensure each item takes up full width of the parent */
-    margin-bottom: 10px; /* Add space between items */
+    margin-bottom: 1vh; /* Add space between items */
     position: relative; /* To position the overlay on top of the image */
+    display: flex;
+    justify-content: center;
+    align-items: center;
   }
  .post-item::after {
     content: ''; /* Creates an empty pseudo-element */
@@ -23,45 +26,65 @@
     left: 0;
     right: 0;
     bottom: 0;
-    background: linear-gradient(to bottom, rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0)); 
+    background: linear-gradient(to bottom, rgba(0, 0, 0, 0.8) 0%, rgba(0, 0, 0, 0) 50%);
+
     pointer-events: none; 
  }
   .post img {
     width: 100%; /* Let the image fill the width of the container */
     height: 600px; /* Maintain aspect ratio */
     object-fit: cover; /* Ensure the image covers the space without distortion */
+    top: 0;
   }
   
   .post-overlay {
-    position: absolute; /* Overlay on top of the image */
+    position: absolute;
     top: 0;
-    left: 0;
     width: 100%;
     height: 100%;
     color: rgb(255, 255, 255);
-    z-index: 2; /* Ensure overlay is on top */
+    z-index: 2; 
     display: flex;
     flex-direction: column;
-    justify-content: flex-start; /* Align content to the bottom of the image */
     align-items: center;
-    padding: 1rem; /* Add padding for spacing */
-    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+    padding: 2rem;
+    h2{
+      font-size: 48px;
+        line-height: 1.3;
+        font-weight: 600;
+    }
+    p{
+      font-size: 24px;
+        line-height: 1.;
+        font-weight: 400;
+        letter-spacing: -0.02em;
+    }
   }
-  
-  .post-overlay button {
-    font-size: 1rem;
-    border: none;
-    border-radius: 1rem;
-    cursor: pointer;
-    height: 2rem;
-    width: 8rem;
-    background-color: var(--navy);
-    margin-top: 2rem;
-  }
-  
-  .post-overlay button a {
-    text-decoration: none;
-    color: var(--yellow);
+  .post-links {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    margin-top: 0.5rem;
+    gap: 1rem;
+    a{
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      text-decoration: none;
+      color: white;
+      background-color: var(--blue);
+      border-radius: 40px;
+      height: 1.6rem;
+      padding: 0 20px;
+      font-size: 20px;
+    }
+    #post-trans{
+      background-color: white;
+      font-weight: 400;
+      color: var(--blue);
+    }
   }
   @media screen and (min-width: 1000px) {
     .post img {
