--- a/src/app/home/Parts/Review.css
+++ b/src/app/home/Parts/Review.css
@@ -41,7 +41,7 @@
     left: 0;
     right: 0;
     bottom: 0;
-    background: linear-gradient(to top, rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0));
+    background: linear-gradient(to top, rgba(0, 0, 0, 0.8) 0%, rgba(0, 0, 0, 0) 50%);
     pointer-events: none; /* ป้องกันไม่ให้คลิกที่เลเยอร์นี้ */
 }
   
@@ -69,7 +69,7 @@
     z-index: 2;
   }
   
-  .slider-nav button {
+  .review .slider-nav button {
     background-color: rgba(0, 0, 0, 0.1);
     color: white;
     border: none;
@@ -80,7 +80,7 @@
     transition: transform 0.2s ease-in-out;
   }
   
-  .slider-nav button:hover {
+  .review .slider-nav button:hover {
     transform: scale(1.1);
   }
   @media screen and (max-width: 1400px) {
