--- a/src/app/home/Parts/MainSlider.css
+++ b/src/app/home/Parts/MainSlider.css
@@ -55,7 +55,7 @@
     left: 0;
     right: 0;
     bottom: 0;
-    background: linear-gradient(to bottom, rgba(0, 0, 0, 0.8) 0%, rgba(0, 0, 0, 0) 60%);
+    background: linear-gradient(to bottom, rgba(0, 0, 0, 0.8) 0%, rgba(0, 0, 0, 0) 42%);
     pointer-events: none;
 }
 
@@ -118,7 +118,7 @@
     width: 4rem;
     height: 4rem;
     overflow: hidden;
-    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.3);
+    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.8);
     transition: 0.2s ease-in-out;
     img{
       height: 100%;
@@ -127,11 +127,15 @@
   }
  
   .container .slider-nav button:not(.active) img {
-    filter: brightness(0.3); /* Darken inactive images */
+    filter: brightness(0.2); /* Darken inactive images */
+    
   }
-  
+  .container .slider-nav button.active {
+    filter: brightness(1); 
+    transform: scale(1.05);
+  }
   .container .slider-nav button.active img {
-    filter: brightness(1); /* Ensure active images are fully visible */
+    filter: brightness(1); 
   }
   
   @media screen and (max-width: 876px) {
