--- a/src/app/home/Parts/Post.css
+++ b/src/app/home/Parts/Post.css
@@ -48,6 +48,7 @@
     flex-direction: column;
     align-items: center;
     padding: 2rem;
+    text-align: center;
     h2{
       font-size: 48px;
         line-height: 1.3;
