--- a/src/app/components/Navbar.css
+++ b/src/app/components/Navbar.css
@@ -12,7 +12,7 @@
 }
 
 .navbar.scrolled {
-    background-color: rgba(0, 0, 0, 0.8); /* Solid background when scrolled */
+    background-color: var(--navy); /* Solid background when scrolled */
 }
 
 .navbar ul {
@@ -83,15 +83,15 @@
     left: 0;
     width: 100%;
     height: 100vh;
-    background-color: rgba(0, 0, 0, 0.9);
+    background-color: var(--navy);
     color: white;
     display: flex;
     flex-direction: column;
     justify-content: top;
     padding: 100px 100px;
-    transition: top 0.6s ease;
+    transition: top 0.8s ease, opacity 0.8s ease;
+    opacity: 0;
     z-index: 2;
-    
 }
 
 .dropdown-item {
@@ -99,9 +99,11 @@
     font-size: 1.5rem;
     text-decoration: none;
     color: white;
-    transition: transform 0.3s ease, color 0.3s ease;
-    
+    opacity: 0;
+    transform: translateY(20px);
+    transition: transform 0.8s ease, opacity 0.8s ease;
 }
+
 .dropdown-item:hover {
     color: #00bfff;
 }
@@ -109,6 +111,12 @@
 /* Show dropdown menu when checkbox is checked */
 .hamburger-checkbox:checked ~ .dropdown-menu {
     top: 0px;
+    opacity: 1;
+}
+
+.hamburger-checkbox:checked ~ .dropdown-menu .dropdown-item {
+    transform: translateY(0);
+    opacity: 1;
 }
 /* Responsive design */
 @media screen and (max-width: 1000px) {
