--- a/src/app/home/Parts/MainSlider.css
+++ b/src/app/home/Parts/MainSlider.css
@@ -1,153 +1,201 @@
 .container {
-    position: relative;
-    width: 100%;
-    height: auto;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    overflow: hidden;
-  }
-  
-  .container .slider-wrapper {
-    position: relative;
-    width: 100vw;
-    overflow: hidden;
-    box-shadow: 0 1.5rem 3rem -0.75rem hsla(0, 0%, 0%, 0.25);
-    
-  }
-  
-  .container .slider {
-    display: flex;
-    scroll-snap-type: x mandatory;
-    overflow-x: auto;
-    gap: 0;
-    object-fit: cover;
-    overflow: hidden;
-    width: 100%;
-    height: 100vh;
-  }
-  
-
-  
-  .container .slide {
-    position: relative; /* Allows positioning of the pseudo-element */
-    width: 100%;
-    height: 100%;
+  position: relative;
+  width: 100%;
+  height: auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  overflow: hidden;
+  background-color: black;
 }
 
-.container .slide img {
-    width: 100vw; /* Image will span the full viewport width */
-    height: 100%; /* Image height will fill the parent container */
-    object-fit: cover; /* Ensures the image covers the container while maintaining aspect ratio */
-    scroll-snap-align: center; /* Ensures smooth scroll snapping */
+.container .slider-wrapper {
+  position: relative;
+  width: 100vw;
+  overflow: hidden;
+  box-shadow: 0 1.5rem 3rem -0.75rem hsla(0, 0%, 0%, 0.25);
 }
-.container .slide video {
-  width: 100vw; /* Image will span the full viewport width */
-  height: 100%; /* Image height will fill the parent container */
-  object-fit: cover; /* Ensures the image covers the container while maintaining aspect ratio */
-  scroll-snap-align: center; /* Ensures smooth scroll snapping */
+
+.container .slider {
+  display: flex;
+  scroll-snap-type: x mandatory;
+  overflow-x: auto;
+  gap: 0;
+  object-fit: cover;
+  overflow: hidden;
+  width: 100%;
+  height: 100vh;
+  align-items: end;
+}
+
+.container .slide {
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  height: 100vh;
+  width: 100vw;
+  flex-shrink: 0;
+}
+
+.container .slide-content {
+  width: 100vw;
+  height: 100vh;
+  position: absolute;
+  display: flex;
+  align-items: end;
+  
+}
+
+.container .slide-content img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  scroll-snap-align: center;
+}
+
+.container .slide-content video {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  scroll-snap-align: center;
+  position: relative; /* Add this */
+  
 }
 
 .container .slide::after {
-    content: ''; 
-    position: absolute; 
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    background: linear-gradient(to bottom, rgba(0, 0, 0, 0.8) 0%, rgba(0, 0, 0, 0) 42%);
-    pointer-events: none;
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: linear-gradient(to bottom, rgba(0, 0, 0, 1) 0%, rgba(0, 0, 0, 0) 100%);
+  pointer-events: none;
+}
+
+.container .text-overlay {
+  position: absolute;
+  top: 14vh;
+  left: 10vw;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  z-index: 2;
+  text-shadow: rgba(0, 0, 0, 0.5);
+  width: 80%;
+  
+}
+.slide-description{
+  width: 60%;
+}
+
+.container .text-overlay h1 {
+  font-size: 1.5rem;
+  line-height: 1.2;
+  color: white;
+}
+
+.container .text-overlay p {
+  font-size: 1rem;
+  color: white;
+}
+
+.container .text-overlay .button-link {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 0.8rem;
+  text-align: center;
+  text-decoration: none;
+  border-radius: 50px;
+  cursor: pointer;
+  height: 2rem;
+  width: 6rem;
+  margin-top: 1rem;
+  background-color: var(--blue);
+  color: white;
+  transition: all 0.2s ease-in-out;
+  padding: 0;
+}
+
+.container .slider-nav {
+  position: absolute;
+  bottom: 10vh;
+  right: 10vw;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+  z-index: 2;
+}
+
+.container .slider-nav button {
+  display: flex;
+  justify-content: center;
+  background-color: rgba(0, 0, 0, 0.5);
+  color: white;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  width: 4rem;
+  height: 4rem;
+  overflow: hidden;
+  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.8);
+  transition: 0.2s ease-in-out;
+}
+
+.container .slider-nav button img {
+  height: 100%;
+  object-fit: cover;
+}
+
+.container .slider-nav button:not(.active) img {
+  filter: brightness(0.2);
+}
+
+.container .slider-nav button.active {
+  filter: brightness(1); 
+  transform: scale(1.05);
+}
+
+.container .slider-nav button.active img {
+  filter: brightness(1); 
+}
+
+@media screen and (max-width: 600px) {
+  .container .slider,
+  .container .slide,
+  .container .slide-content {
+      height: 100vh;
+      
+  }
+  .container .slide-content video {
+    height: 100%;
+
+
+  }
+  .slide-description{
+    width: 100%;
+  }
+  .container .text-overlay {
+    p{
+    font-size: 0.8rem;
+    }
+    h1{
+      font-size: 1.5rem;
+    }
+    .button-link {
+      margin-top: 0;
+
+  }
+
+  .container .slider-nav {
+      /* display: none; */
+      
+  }
 }
 
   
-  .container .text-overlay {
-    position: absolute;
-    transform: translate(10%, -80%);
-    
-    width: 80%;
-    height: 100%;
-    color: white;
-    text-align: left;
-    z-index: 2;
-
-    h1{
-      font-size:2rem;
-      line-height: 2;
-    }
-    p{
-        font-size: 1rem;
-        
-    }
-    .button-link {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      font-size: 0.8rem;
-      text-align: center;
-      text-decoration: none;
-      border-radius: 50px ;
-      cursor: pointer;
-      height: 2rem;
-      width: 6rem;
-      margin-top: 1rem;
-      background-color: var(--blue);
-      color: white;
-      transition: all 0.2s ease-in-out;
-      padding: 0;
-    }
-    
-  }
-  
-  .container .slider-nav {
-    position: absolute;
-    bottom: 10vh;
-    right: 10vw;
-    display: flex;
-    gap: 10px;
-    z-index: 2;
-  }
-  
-  .container .slider-nav button {
-    display: flex;
-    justify-content: center;
-    background-color: rgba(0, 0, 0, 0.5);
-    color: white;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-    width: 4rem;
-    height: 4rem;
-    overflow: hidden;
-    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.8);
-    transition: 0.2s ease-in-out;
-    img{
-      height: 100%;
-      object-fit: cover;
-    }
-  }
- 
-  .container .slider-nav button:not(.active) img {
-    filter: brightness(0.2); /* Darken inactive images */
-    
-  }
-  .container .slider-nav button.active {
-    filter: brightness(1); 
-    transform: scale(1.05);
-  }
-  .container .slider-nav button.active img {
-    filter: brightness(1); 
-  }
-  
-  @media screen and (max-width: 876px) {
-    .container {
-      height: 100vh;
-      width: 100%;
-    }
-    .container .slider-nav {
-
-        bottom: 20vw;
-        right: 10vw;
-
-      }
-  }
-  
+}
