--- a/src/app/home/Parts/MainSlider.css
+++ b/src/app/home/Parts/MainSlider.css
@@ -89,6 +89,7 @@
 }
 .slide-description{
   width: 60%;
+  margin: 1rem 0;
 }
 
 .container .text-overlay h1 {
@@ -191,10 +192,7 @@
 
   }
 
-  .container .slider-nav {
-      /* display: none; */
-      
-  }
+  
 }
 
   
