--- a/src/app/home/Parts/Review.css
+++ b/src/app/home/Parts/Review.css
@@ -21,18 +21,39 @@
   }
   
   .review .slide {
-    position: relative; /* ทำให้สามารถใช้ position absolute ในลูกได้ */
-    flex: 0 0 25%; 
+    position: relative;
+    flex: 0 0 25%;
     display: flex;
     justify-content: center;
     align-items: center;
+    overflow: hidden; /* Ensure content doesn't overflow */
+    z-index: 2;
+
+}
+.review .slide:hover {
+  transform: scale(1);
 }
 
-.review .slide img {
-    width: 100%; 
+.review .slide img,
+.review .slide video {
+    width: 100%;
     height: 100%;
     object-fit: cover;
+    transition: opacity 0.5s ease; 
+    position: absolute;
+    top: 0;
+    left: 0;
 }
+.review .slide video{
+  opacity: 0;
+}
+.review .slide:hover video{
+  opacity: 1;
+  
+
+}
+
+
 
 .review .slide::after {
     content: ''; /* สร้าง pseudo-element */
@@ -45,7 +66,7 @@
     pointer-events: none; /* ป้องกันไม่ให้คลิกที่เลเยอร์นี้ */
 }
   
-.review .slide p {
+.review .review-overlay {
     position: absolute;
     bottom: 0;
     left: 50%;
@@ -57,20 +78,10 @@
     z-index: 2;
 }
 
-  
-  .review .slider-nav {
+
+  #left-prevSlide-button, #right-nextSlide-button{
     position: absolute;
-    display: flex;
-    justify-content: space-between;
-    width: 100%;
-    height: 100%;
-    top: 50%;
-    transform: translateY(-50%);
-    z-index: 2;
-  }
-  
-  .review .slider-nav button {
-    background-color: rgba(0, 0, 0, 0.1);
+    background-color: rgba(0, 0, 0, 0.4);
     color: white;
     border: none;
     cursor: pointer;
@@ -78,12 +89,22 @@
     height: 100%;
     font-size: 1.5rem;
     transition: transform 0.2s ease-in-out;
+    z-index: 2;
+  }
+  #left-prevSlide-button{
+    left: 0;
+  }
+  #right-nextSlide-button{
+    right: 0;
   }
   
   .review .slider-nav button:hover {
     transform: scale(1.1);
   }
   @media screen and (max-width: 1400px) {
+    .review .slide video{
+      opacity: 1;
+    }
     .review .slide {
      
       flex: 0 0 50%;
