--- a/src/app/home/Parts/MainSlider.css
+++ b/src/app/home/Parts/MainSlider.css
@@ -182,10 +182,11 @@
   }
   .container .text-overlay {
     p{
-    font-size: 0.8rem;
+    font-size: 0.7rem;
     }
     h1{
       font-size: 1.5rem;
+      line-height: 1;
     }
     .button-link {
       margin-top: 0;
