--- a/src/app/home/Parts/Post.css
+++ b/src/app/home/Parts/Post.css
@@ -81,7 +81,7 @@
       padding: 0 20px;
       font-size: 20px;
     }
-    #post-trans{
+    .post-trans{
       background-color: white;
       font-weight: 400;
       color: var(--blue);
