--- a/src/app/home/Parts/Post.css
+++ b/src/app/home/Parts/Post.css
@@ -39,13 +39,13 @@
   
   .post-overlay {
     position: absolute;
-    top: 0;
     width: 100%;
     height: 100%;
     color: rgb(255, 255, 255);
     z-index: 2; 
     display: flex;
     flex-direction: column;
+    justify-content: start;
     align-items: center;
     padding: 2rem;
     text-align: center;
