--- a/src/app/home/Parts/Review.css
+++ b/src/app/home/Parts/Review.css
@@ -71,10 +71,16 @@
     left: 50%;
     transform: translateX(-50%);
     color: white; /* ปรับสีข้อความ */
-    font-size: 18px; /* ปรับขนาดตัวอักษร */
+   
     padding: 10px;
     text-align: center;
     z-index: 2;
+    p{
+      font-size: 0.5rem;
+    }
+    h1{
+      font-size: 0.65rem;
+    }
 }
 
 
