--- a/src/app/home/Parts/Post.css
+++ b/src/app/home/Parts/Post.css
@@ -12,6 +12,7 @@
   }
   
   .post-item {
+    
     width: 100%; /* Ensure each item takes up full width of the parent */
     margin-bottom: 1vh; /* Add space between items */
     position: relative; /* To position the overlay on top of the image */
@@ -20,14 +21,13 @@
     align-items: center;
   }
  .post-item::after {
-    content: ''; /* Creates an empty pseudo-element */
-    position: absolute; /* Positions it relative to the slide container */
+    content: ''; 
+    position: absolute;
     top: 0;
     left: 0;
     right: 0;
     bottom: 0;
     background: linear-gradient(to bottom, rgba(0, 0, 0, 0.8) 0%, rgba(0, 0, 0, 0) 50%);
-
     pointer-events: none; 
  }
   .post img {
@@ -41,7 +41,7 @@
     position: absolute;
     width: 100%;
     height: 100%;
-    color: rgb(255, 255, 255);
+    color: white;
     z-index: 2; 
     display: flex;
     flex-direction: column;
@@ -79,7 +79,8 @@
       border-radius: 40px;
       height: 1.6rem;
       padding: 0 20px;
-      font-size: 20px;
+      font-size: 24px;
+      font-weight: 400;
     }
     .post-trans{
       background-color: white;
