--- a/src/app/home/Parts/Review.css
+++ b/src/app/home/Parts/Review.css
@@ -68,18 +68,23 @@
 .review .review-overlay {
     position: absolute;
     bottom: 0;
-    left: 50%;
-    transform: translateX(-50%);
+    display: flex;
+    flex-direction: column;
     color: white; /* ปรับสีข้อความ */
    
     padding: 10px;
     text-align: center;
     z-index: 2;
-    p{
-      font-size: 0.5rem;
-    }
     h1{
-      font-size: 0.65rem;
+      font-size: 48px;
+        line-height: 1.3;
+        font-weight: 600;
+    }
+    p{
+      font-size: 24px;
+        line-height: 1.;
+        font-weight: 400;
+        letter-spacing: -0.02em;
     }
 }
 
@@ -90,7 +95,7 @@
     color: white;
     border: none;
     cursor: pointer;
-    width: 2rem;
+    width: 10vw;
     height: 100%;
     font-size: 1.5rem;
     transition: transform 0.2s ease-in-out;
@@ -98,11 +103,11 @@
   }
   #left-prevSlide-button{
     left: 0;
-    background: linear-gradient(to right, rgba(0, 0, 0, 1) 0%, rgba(0, 0, 0, 0) 100%);
+    background: linear-gradient(to right, rgba(0, 0, 0, 1) 0%, rgba(0, 0, 0, 0) 80%);
   }
   #right-nextSlide-button{
     right: 0;
-    background: linear-gradient(to left, rgba(0, 0, 0, 1) 0%, rgba(0, 0, 0, 0) 100%);
+    background: linear-gradient(to left, rgba(0, 0, 0, 1) 0%, rgba(0, 0, 0, 0) 80%);
   }
   
   .review .slider-nav button:hover {
@@ -120,6 +125,9 @@
      
       flex: 0 0 50%;
       
+    }
+    #left-prevSlide-button, #right-nextSlide-button{
+      width: 20vw;
     }
     
   }
