--- a/src/app/components/Navbar.css
+++ b/src/app/components/Navbar.css
@@ -6,17 +6,14 @@
     top: 0;
     background: linear-gradient(to bottom, rgba(0, 0, 0, 0.8) 0%, rgba(0, 0, 0, 0) 75%);
     width: 100%;
-    z-index: 10;
+    z-index: 80;
     transition: background-color 0.4s ease, box-shadow 0.4s ease;
     padding: 10px 0 5px 0;
-}
 
-.navbar.scrolled {
-    background-color: var(--navy); /* Solid background when scrolled */
 }
 
 .navbar ul {
-    width: 90%;
+    width: 80%;
     display: flex;
     justify-content: space-between;
     list-style: none;
@@ -55,9 +52,17 @@
     z-index: 2;
     transition: 0.2s;
 }
-.navbar a:hover{
-    transform: scale(1.1);
+.nav-wrapper a:hover{
+
     color: #00bfff;
+}
+.nav-link{
+    display: flex;
+    gap:10px
+}
+.nav-link a:hover{
+    transform: scale(1.1);
+    
 }
 .nav img{
     width: 100px;
