--- a/src/app/home/Parts/Post.css
+++ b/src/app/home/Parts/Post.css
@@ -81,12 +81,18 @@
       padding: 0 20px;
       font-size: 24px;
       font-weight: 400;
+      transition: 0.2s;
     }
     .post-trans{
       background-color: white;
       font-weight: 400;
       color: var(--blue);
     }
+  }
+  .post-links a:hover {
+    transform: scale(1.05);
+
+   
   }
   @media screen and (min-width: 1000px) {
     .post img {
