--- a/src/app/components/Navbar.css
+++ b/src/app/components/Navbar.css
@@ -10,7 +10,7 @@
     transition: background-color 0.4s ease, box-shadow 0.4s ease;
     padding: 10px 0 5px 0;
 
-}
+}   
 
 .navbar ul {
     width: 80%;
@@ -31,6 +31,7 @@
 
 .navbar img{
     width: 2rem;
+    height: auto;
 }
 
 .nav-wrapper {
@@ -63,9 +64,6 @@
 .nav-link a:hover{
     transform: scale(1.1);
     
-}
-.nav img{
-    width: 100px;
 }
 
 .nav-icon {
