--- a/src/app/course/test/components/CourseHero.css
+++ b/src/app/course/test/components/CourseHero.css
@@ -40,17 +40,7 @@
   align-items: center;
   padding: 2rem;
   text-align: center;
-  h1 {
-    font-size: 48px;
-    line-height: 1.3;
-    font-weight: 600;
-  }
-  p {
-    font-size: 24px;
-    line-height: 1;
-    font-weight: 400;
-    letter-spacing: -0.02em;
-  }
+  
 }
 .course-links {
   display: flex;
@@ -58,7 +48,7 @@
   justify-content: end;
 
   height: 80%;
-  margin-top: 0.5rem;
+  margin-bottom: 1rem;
   gap: 1rem;
 
   a {
@@ -72,15 +62,11 @@
     cursor: pointer;
     height: 2rem;
     width: 6rem;
+    margin-bottom: 1rem;
     margin-top: 1rem;
     background-color: var(--blue);
     color: white;
     transition: all 0.2s ease-in-out;
     padding: 0;
-  }
-}
-@media screen and (max-width: 1000px) {
-  .course-hero img {
-    height: 800px;
   }
 }
