--- a/src/app/course/test/components/CourseGet.css
+++ b/src/app/course/test/components/CourseGet.css
@@ -5,4 +5,12 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    padding: 2rem;
+    h1{
+        color: var(--navy);
+    }
+    p {
+        color: var(--gray);
+    }
+    
 }
