--- a/src/app/components/Navbar.css
+++ b/src/app/components/Navbar.css
@@ -9,6 +9,7 @@
     z-index: 80;
     transition: background-color 0.4s ease, box-shadow 0.4s ease;
     padding: 10px 0 5px 0;
+    
 
 }   
 
@@ -40,7 +41,7 @@
 }
 
 .navbar a, .hamburger-button {
-    margin: 0 15px;
+
     color: #FAF9F6;
     font-size: 1rem;
     font-weight: lighter;
@@ -88,24 +89,32 @@
     left: 0;
     width: 100vw;
     height: 100vh;
-    background-color: var(--navy);
+    background-color: #1d1d1d;
     color: white;
     display: flex;
     flex-direction: column;
-    transition: top 0.8s ease, opacity 0.8s ease;
-    padding: 2rem 1rem;
+    transition: top 0.4s ease-in-out, opacity 0.2s ease;
+    padding: 2.5rem 2rem;
     overflow-y: scroll;
+    text-align: left;
     z-index: 2;
     opacity: 0;
+    
+    
 }
-
 /* Styles for individual dropdown items */
 .dropdown-item {
-    
-    padding: 0.4rem;
     text-decoration: none;
-    line-height: 1.5; /* Adjusted for better readability */
-    /* Headings inside dropdown items */
+    line-height: 1.5;
+    display: flex;
+    flex-direction: column;
+    transition: 0.8s;
+    opacity: 0;
+    hr{
+        opacity: 0.2;
+        width: 100%;
+    }
+
     h1 {
         font-size: 1rem;
         font-weight: 600;
@@ -118,23 +127,18 @@
         margin: 0;
     
     }
+    
 }
 
 /* Styles for the course name container */
 .course-name {
     display: flex;
-    justify-content: flex-start;
-    align-items: center;
+    justify-content: center;
     width: 100%;
-    text-align: left;
-
-    /* Styles for the course image */
-    img {
-        width: auto;
-        height: 50px;
-        border-radius: 12px; /* Rounded corners for better aesthetics */
-        margin-right: 20px;
-    }
+    height: 3rem;
+    flex-direction: column;
+    
+    
 }
 
 /* Hover effect for dropdown items */
@@ -148,7 +152,6 @@
 .dropdown-menu.active .dropdown-item {
     opacity: 1;
     transform: translateY(0);
-    transition: opacity 0.5s ease, transform 0.5s ease;
 }
 
 
