--- a/src/app/course/test/components/CourseHero.css
+++ b/src/app/course/test/components/CourseHero.css
@@ -11,6 +11,7 @@
     line-height: 1;
     font-weight: 600;
 }
+
 p{
     line-height: 1.2;
     font-weight: 400;
@@ -27,7 +28,7 @@ p{
   background: linear-gradient(
     to bottom,
     rgba(0, 0, 0, 0.8) 0%,
-    rgba(0, 0, 0, 0) 50%
+    rgba(0, 0, 0, 0) 100%
   );
   pointer-events: none;
 }
@@ -39,31 +40,34 @@ p{
 
 .course-overlay {
   position: absolute;
-  width: 100%;
+  width: 80%;
   height: 100%;
   color: white;
   z-index: 2;
   display: flex;
   flex-direction: column;
-  top: 2rem;
+  justify-content: center;
   align-items: center;
-  padding: 2rem 1rem;
+  top: 2rem;
+  padding: 2rem 0rem;
 }
 .course-text {
   display: flex;
+  text-align: center;
   flex-direction: column;
+  align-items: center;
+  justify-content: center;
   gap: 20px;
-  align-self: start;
-  width: 100%;
   max-width: 800px;
+  height: 100%;
+  
 
 }
 .course-links {
   display: flex;
   flex-direction: column;
   justify-content: end;
-
-  height: 80%;
+  align-items: center;
   margin-bottom: 1rem;
   gap: 1rem;
 
@@ -85,4 +89,8 @@ p{
     transition: all 0.2s ease-in-out;
     padding: 0;
   }
+}
+@media  screen and (max-width: 1000px) {
+
+  
 }
