--- a/src/app/course/test/components/CourseHero.css
+++ b/src/app/course/test/components/CourseHero.css
@@ -50,6 +50,12 @@ p{
   align-items: center;
   top: 2rem;
   padding: 2rem 0rem;
+  hr{
+      border: 1px solid #ccc;
+      width: 100%; 
+      margin: 2rem;
+    
+  }
 }
 .course-text {
   display: flex;
@@ -59,16 +65,15 @@ p{
   justify-content: center;
   gap: 20px;
   max-width: 800px;
-  height: 100%;
+
   
 
 }
 .course-links {
   display: flex;
   flex-direction: column;
-  justify-content: end;
   align-items: center;
-  margin-bottom: 1rem;
+  margin: 0rem 0;
   gap: 1rem;
 
   a {
@@ -82,8 +87,6 @@ p{
     cursor: pointer;
     height: 2rem;
     width: 6rem;
-    margin-bottom: 1rem;
-    margin-top: 1rem;
     background-color: var(--blue);
     color: white;
     transition: all 0.2s ease-in-out;
