--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,6 +3,7 @@
 :root {
   --navy: #16325b;
   --blue: #3894ff;
+  --dark-blue: #1b77ee;
   --yellow: #ffdc50;
   --off-white: #fffcf1;
   --red: #dc4a44;
