--- a/src/app/course/test/components/CourseContent.css
+++ b/src/app/course/test/components/CourseContent.css
@@ -2,12 +2,25 @@
     display: flex;
     justify-content: center;
     flex-direction: column;
+    align-items: center;
     padding: 2rem;
 
 }
 .course-item {
     padding: 2rem 0;
     color: var(--blue);
+    width: 100%;
+    max-width: 1200px;
+    display: flex;
+    flex-direction: column;
+    text-align: left;
+    justify-content: center;
+    align-items: center;
+    video{
+        margin-top: 4rem;
+        max-width: 800px;
+        width: 100%;
+    }
     p{
         color: var(--gray);
     }
