--- a/src/app/course/test/components/CourseGet.css
+++ b/src/app/course/test/components/CourseGet.css
@@ -1,10 +1,8 @@
 .course-get {
     position: relative;
     width: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+    display: block;
+    text-align: center;
     overflow: hidden;
     margin: 2rem 0;
     gap: 1rem;
