--- a/src/app/course/test/components/CourseHero.css
+++ b/src/app/course/test/components/CourseHero.css
@@ -73,7 +73,7 @@ p{
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin: 0rem 0;
+
   gap: 1rem;
 
   a {
@@ -91,6 +91,9 @@ p{
     color: white;
     transition: all 0.2s ease-in-out;
     padding: 0;
+  }
+  a:hover{
+    background-color: var(--dark-blue);
   }
 }
 @media  screen and (max-width: 1000px) {
