--- a/src/app/course/test/components/CourseVideo.css
+++ b/src/app/course/test/components/CourseVideo.css
@@ -20,6 +20,7 @@
     display: flex;
     flex-direction: column; 
     justify-content: center;
+    text-align: center;
     padding: 2rem;
   }
   
