--- a/src/app/home/Parts/MainSlider.css
+++ b/src/app/home/Parts/MainSlider.css
@@ -113,7 +113,7 @@
     padding: 0;
   }
   a:hover {
-    transform: scale(1.05);
+    background-color: var(--dark-blue);
   }
 }
 .slide-description {
