--- a/src/app/home/Parts/Post.css
+++ b/src/app/home/Parts/Post.css
@@ -90,7 +90,8 @@
     }
   }
   .post-links a:hover {
-    transform: scale(1.05);
+    background-color: var(--dark-blue);
+    color: white;
 
    
   }
