--- a/src/app/components/Navbar.css
+++ b/src/app/components/Navbar.css
@@ -93,7 +93,7 @@
     color: white;
     display: flex;
     flex-direction: column;
-    transition: top 0.4s ease-in-out, opacity 0.2s ease;
+    transition: top 0.4s ease, opacity 0.2s ease;
     padding: 2.5rem 2rem;
     overflow-y: scroll;
     text-align: left;
@@ -110,6 +110,7 @@
     flex-direction: column;
     transition: 0.8s;
     opacity: 0;
+    
     hr{
         opacity: 0.2;
         width: 100%;
@@ -131,12 +132,13 @@
 }
 
 /* Styles for the course name container */
-.course-name {
+.course-list {
     display: flex;
     justify-content: center;
     width: 100%;
-    height: 3rem;
+    height: 2rem;
     flex-direction: column;
+ 
     
     
 }
