--- a/src/app/course/test/components/CourseVideo.css
+++ b/src/app/course/test/components/CourseVideo.css
@@ -20,8 +20,11 @@
     display: flex;
     flex-direction: column; 
     justify-content: center;
-    text-align: center;
+
     padding: 2rem;
+    li{
+      text-align: left;
+    }
   }
   
   .course-video video {
